RESOLVED FIXED183108
Font smoothing doesn't get disabled if the preference is set before launching WebContent process
https://bugs.webkit.org/show_bug.cgi?id=183108
Summary Font smoothing doesn't get disabled if the preference is set before launching...
Alexey Proskuryakov
Reported 2018-02-25 12:01:04 PST
WebProcess::initializeWebProcess() can only enable font smoothing, never disable it - but it's enabled by default in WebCore. This manifests in sporadic font rendering related failures on WebKit tests, as the first test that runs after killing a frozen WebContent doesn't get font smoothing disabled.
Attachments
proposed fix (1.56 KB, patch)
2018-02-25 12:03 PST, Alexey Proskuryakov
thorton: review+
Alexey Proskuryakov
Comment 1 2018-02-25 12:03:04 PST
Created attachment 334582 [details] proposed fix
Alexey Proskuryakov
Comment 2 2018-02-25 18:13:29 PST
Radar WebKit Bug Importer
Comment 3 2018-02-25 18:14:20 PST
Note You need to log in before you can comment on or make changes to this bug.