Font smoothing doesn't get disabled if the preference is set before launching WebContent process https://bugs.webkit.org/show_bug.cgi?id=183108

Reviewed by Tim Horton.

* WebProcess/WebProcess.cpp: (WebKit::WebProcess::initializeWebProcess):
Fix the bug. While at it, also avoid the anti-pattern in setAlwaysUsesComplexTextCodePath.



Canonical link: https://commits.webkit.org/198837@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228982 268f45cc-cd09-0410-ab3c-d52691b4dbfc